[gd_scene load_steps=2 format=3 uid="uid://cc5p2ndnws7gt"]

[ext_resource type="Script" uid="uid://7vjyf2p2jvrb" path="res://ui/RouteListItem/RouteListItem.gd" id="1_j74bi"]

[node name="RouteListItem" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 41.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_j74bi")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RouteNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="EditButton" type="Button" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
tooltip_text = "Modify this route"
text = "edit"
expand_icon = true

[node name="RenameButton" type="Button" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
tooltip_text = "Change name of this roule"
text = "rename"

[node name="DuplicateButton" type="Button" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
tooltip_text = "Create a copy of this route"
text = "duplicate"

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
tooltip_text = "Delete this route"
text = "delete"

[node name="ContextMenu" type="PopupMenu" parent="."]
size = Vector2i(100, 116)
item_count = 4
item_0/text = "edit"
item_0/id = 0
item_1/text = "rename"
item_1/id = 1
item_2/text = "duplicate"
item_2/id = 2
item_3/text = "delete"
item_3/id = 3

[connection signal="gui_input" from="MarginContainer/HBoxContainer/RouteNameLabel" to="." method="_on_route_name_label_gui_input"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RenameButton" to="." method="_on_rename_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="id_pressed" from="ContextMenu" to="." method="_on_context_menu_id_pressed"]
